fix checkbox wrap

--- a/maps1/public/stylesheets/style.css
+++ b/maps1/public/stylesheets/style.css
@@ -176,6 +176,7 @@ ul.view-checkbox li label {
 label {
   font-weight:normal !important;  
   color: #494949;
+  overflow: auto;
 }
 
 .vrthreat-panel1
